[package]
name = "elifim"
version = "0.2.0"
edition = "2021"
description = "Evolution simulation of agents with neural networks"
readme = "README.md"
repository = "https://github.com/GiftofHermes/elifim"
license = "Apache-2.0"
keywords = ["simulation", "evolution", "agent"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
fixedbitset = "0.4.2"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
